1a-Static/docker.txt
Microsoft Windows [Version 10.0.22621.3447]
(c) Microsoft Corporation. All rights reserved.

C:\Users\asus>docker -v
Docker version 26.0.0, build 2ae903e

C:\Users\asus>docker images
REPOSITORY   TAG       IMAGE ID   CREATED   SIZE

C:\Users\asus>docker ps
CONTAINER ID   IMAGE     COMMAND   CREATED   STATUS    PORTS     NAMES

C:\Users\asus>docker pull openjdk
Using default tag: latest
latest: Pulling from library/openjdk
197c1adcd755: Pull complete
57b698b7af4b: Pull complete
95a27dbe0150: Pull complete
Digest: sha256:9b448de897d211c9e0ec635a485650aed6e28d4eca1efbc34940560a480b3f1f
Status: Downloaded newer image for openjdk:latest
docker.io/library/openjdk:latest

What's Next?
  View a summary of image vulnerabilities and recommendations → docker scout quickview openjdk

C:\Users\asus>docker images
REPOSITORY   TAG       IMAGE ID       CREATED         SIZE
openjdk      latest    71260f256d19   15 months ago   470MB

C:\Users\asus>docker ps
CONTAINER ID   IMAGE     COMMAND   CREATED   STATUS    PORTS     NAMES

C:\Users\asus>docker run --name JAVA -it -d openjdk
19c14f3bd5a7cf6145de3528f74642abd3c0139c0ac13b98b834457ec645c95b

C:\Users\asus>docker exec -it Java jshell
Error response from daemon: No such container: Java

What's next?
  Try Docker Debug for seamless, persistent debugging tools in any container or image → docker debug Java
  Learn more at https://docs.docker.com/go/debug-cli/

C:\Users\asus>docker exec -it JAVA jshell
|  Welcome to JShell -- Version 18.0.2.1
|  For an introduction type: /help intro

jshell> System.out.println("Hello");
Hello

jshell> /exit
|  Goodbye

What's next?
  Try Docker Debug for seamless, persistent debugging tools in any container or image → docker debug JAVA
  Learn more at https://docs.docker.com/go/debug-cli/

C:\Users\asus>docker ps
CONTAINER ID   IMAGE     COMMAND    CREATED              STATUS              PORTS     NAMES
19c14f3bd5a7   openjdk   "jshell"   About a minute ago   Up About a minute             JAVA

C:\Users\asus>


C:\Users\asus>docker run --name Python -it -d python
f73a5a3f1427d16b373121a2962ebec0708e3812b056594277ca86d68aaa092c

C:\Users\asus>docker exec -it Python python
Python 3.12.3 (main, Apr 24 2024, 11:17:35) [GCC 12.2.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> print(hello)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hello' is not defined. Did you mean: 'help'?
>>> print("hello")
hello
>>> /exit
  File "<stdin>", line 1
    /exit
    ^
SyntaxError: invalid syntax
>>> exit
Use exit() or Ctrl-D (i.e. EOF) to exit
>>> exit()

What's next?
  Try Docker Debug for seamless, persistent debugging tools in any container or image → docker debug Python
  Learn more at https://docs.docker.com/go/debug-cli/

C:\Users\asus>